# lvgl_demo

./: CMakeLists.txt
.eide/: eide.json
lv_drivers/: lv_drv_conf.h
lvgl/: lv_conf.h
lvgl/env_support/cmake/: custom.cmake
src/: main.c
src/SiYuanHeiTi-Bold/: lv_font_simsun_16_siyuan.c
src/alarm_sq/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/alarm_sq/components/: ui_comp_hook.c
src/alarm_sq/images/: ui_img_1181773158.c  ui_img_335732264.c  ui_img_827073802.c
src/alarm_sq/screens/: ui_Screen1.c  ui_Screen2.c
src/demo_src/: big_shit.c  big_shit.h  comp_demo.c  comp_demo.h  count_demo.c  count_demo.h  demo_src.h  fk_demo.c  fk_demo.h  meituan_lvgl.c  meituan_lvgl.h  new_demo.c  new_demo.h
src/demo_src/pic/: pic1_8bit.c
src/demo_src/res/: anim_alarm.c  icon_minus.c  icon_plus.c  img_background1.c
src/exam/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
src/exam/components/: ui_comp_hook.c
src/exam/screens/: ui_Screen1.c
src/poc_src/: poc.c  poc.h
src/porting/: lv_porting.c
src/squi/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/squi/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_switch1.c  ui_comp_switch1.h
src/squi/images/: ui_img_1088127317.c  ui_img_1187237374.c  ui_img_1_png.c  ui_img_26967346.c  ui_img_2_png.c  ui_img_3_png.c  ui_img_6_png.c  ui_img_760006719.c  ui_img_7_png.c  ui_img_a_png.c  ui_img_slec_png.c
src/squi/screens/: ui_Screen1.c
